Geometry Tools: Crash when pressing shift + ] #121248

Closed
opened 2024-04-30 10:18:15 +02:00 by Lucas · 6 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.52

Blender Version
Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-29 21:55, hash: 8d13a9608be3
Worked:---
Short description of error
Crash when pressing shift + ].

Exact steps for others to reproduce the error
Open attached blend file and press shift + ] while hovering in the node editor.
Edit: Updated crashing file

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.52 **Blender Version** Broken: version: 4.2.0 Alpha, branch: main, commit date: 2024-04-29 21:55, hash: `8d13a9608be3` Worked:--- **Short description of error** Crash when pressing shift + ]. **Exact steps for others to reproduce the error** Open attached blend file and press shift + ] while hovering in the node editor. Edit: Updated crashing file
Lucas added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-04-30 10:18:16 +02:00

Can't confirm. Can you check this with factory settings?

Can't confirm. Can you check this with factory settings?
Author

Can't confirm. Can you check this with factory settings?

Yes, it crashes even with default settings, here's a picture of the operator being called
image

> Can't confirm. Can you check this with factory settings? Yes, it crashes even with default settings, here's a picture of the operator being called ![image](/attachments/94dbe21d-060a-4651-b1dd-ec7f98c6cfc4)
Author

Here's a video.

Here's a video.
544 KiB

@HooglyBoogly /
Here is a way to call operator not in 3d view.

@HooglyBoogly / ~~Here is a way to call operator not in 3d view.~~
Author

Weird it doesn't crash on the attached blend file, sorry about that, but it crashes if you follow the video

Weird it doesn't crash on the attached blend file, sorry about that, but it crashes if you follow the video
Member

Hi, can confirm. active_node is null after adding a new GN tree for tools.

Hi, can confirm. `active_node` is null after adding a new GN tree for tools.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-05-01 14:48:27 +02:00
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2024-05-01 20:08:14 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#121248
No description provided.