Fix #121248: Crash executing node tool operator without active node

Calling `NODE_OT_select_same_type_step` when no node is active triggers
the crash.